--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -4,6 +4,7 @@
 @import "base";
 @import "grid";
 @import "impression";
+@import "overlay";
 
 //box-sizing IE<8 ...! https://github.com/Schepp/box-sizing-polyfill
 //box-sizing: border-box; *behavior: url(https://raw.github.com/Schepp/box-sizing-polyfill/master/boxsizing.htc);
