--- a/style.css
+++ b/style.css
@@ -204,6 +204,56 @@ input[type="hidden"] {
   .row .row .row .row {
     margin: 0px; }
 
+.overlay {
+  bottom: 0;
+  display: none;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 9999; }
+
+.overlay-bg {
+  background-image: url("overlay-bg.png");
+  display: none;
+  left: 0;
+  position: absolute;
+  top: 0;
+  z-index: 9000; }
+
+.overlay-content {
+  background: #fff;
+  left: 50%;
+  margin-left: -30%;
+  overflow: hidden;
+  padding: 15px;
+  position: fixed;
+  top: 5%;
+  width: 60%;
+  z-index: 9999;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  opacity: 0; }
+
+.overlay-hdr {
+  overflow: hidden;
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+  margin: 10px 0; }
+
+.destroy {
+  background: url("destroy.png") no-repeat center bottom;
+  display: block;
+  float: right;
+  height: 13px;
+  text-indent: -99999px;
+  width: 13px;
+  cursor: pointer; }
+
+.destroy:hover {
+  background-position: center top; }
+
 .button {
   -webkit-border-radius: 24px;
   -moz-border-radius: 24px;
