put buttons next to each other and set max-width to be no more than 90% b/c of the :before prop

--- a/index.jade
+++ b/index.jade
@@ -17,14 +17,15 @@ html(lang="en")
 					h1(class="overlay-h1")
 				div(class="overlay-body")
 			div(class="overlay-bg", onclick="")
-		div(class="spacing")
-			button(class="button") button regular
-		div(class="spacing")
-			button(class="button red") button red
-		div(class="spacing")
-			button(class="button green") button green
-		div(class="spacing")
-			button(class="button blue") button blue
+		div(class="row")
+			div(class="col3")
+				button(class="button") button regular
+			div(class="col3")
+				button(class="button red") button red
+			div(class="col3")
+				button(class="button green") button green
+			div(class="col3")
+				button(class="button blue") button blue
 		ul(class="tabs")
 			li(class="active") active tab
 			li
