--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 button {
   border: 0;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  max-width: 90%; }
 
 * html .clearfix {
   height: 1%;
@@ -75,7 +76,7 @@ ul {
   list-style-position: inside; }
 
 body {
-  width: 540px;
+  width: 640px;
   margin: 20px auto;
   background: #eaeaea;
   direction: ltr;
