--- a/index.jade
+++ b/index.jade
@@ -26,13 +26,14 @@ html(lang="en")
 				button(class="button green") button green
 			div(class="col3")
 				button(class="button blue") button blue
-		ul(class="tabs")
-			li(class="active") active tab
-			li
-			li
-			li
-			li
-		div(class="tab active") here is an active tab
+		div(class="tabs")
+			ul(class="nav")
+				li
+					a(href="#tab1") active tab
+				li
+					a(href="#tab2") second tab
+			div(class="tab", id="tab1") here is an active tab
+			div(class="tab", id="tab2") here is a second tab
 		div(class="row")
 			- for (var i = 1; i < 13; ++i) {
 			- append = "col"+i
